switch over most things for exposee

--- a/frontmatter/front.tex
+++ b/frontmatter/front.tex
@@ -4,23 +4,25 @@
 %%=========================================
 \thispagestyle{empty}
 
-\includegraphics[width=\linewidth]{fig/Logo_Header}
+\begin{center}
+\includegraphics[width=.67\linewidth, height=.2\linewidth]{fig/Logo_Header}
+\end{center}
 \mbox{}\\[1pc]
 \begin{center}
-    \huge{ \bfseries Using Reinforcement Learning to Size Tasks for Scientific Workflows}\\[2pc]
+    \huge{ \bfseries Reliable Multipath Backhaul}\\[2pc]
 
     \Large{Nicolas Zunker}\\
     \large{n.zunker@campus.tu-berlin.de}\\[1pc]
-    \large{December 13, 2021}\\[2pc]
+    \large{\today}\\[2pc]
 
-    BACHELOR'S THESIS\\
-    Distributed and Operating Systems Chair\\
+    MASTER'S THESIS EXPOSEE\\
+    Telecommunication Systems Institute\\
     Technische Universität Berlin
 \end{center}
 \vfill
 
-Examiner 1: Prof. Dr. Odej Kao
-\hfill\llap{Advisor: Jonathan Bader}\\
-Examiner 2: Prof. Dr. Volker Markl
+Examiner 1: Prof. Dr. Thomas Magedanz
+\hfill\llap{Advisor: Hauke Buhr}\\
+Examiner 2: Prof. Dr. Marius Corici
 
 \afterpage{\null\thispagestyle{empty}\newpage}
