--- a/refs.bib
+++ b/refs.bib
@@ -1,250 +1,171 @@
-@inproceedings{FeedbackBasedAllocation,
-	title        = {Feedback-Based Resource Allocation for Batch Scheduling of Scientific Workflows},
-	author       = {Witt, Carl and Wagner, Dennis and Leser, Ulf},
-	year         = 2019,
-	booktitle    = {2019 International Conference on High Performance Computing   Simulation (HPCS)},
-	volume       = {},
-	number       = {},
-	pages        = {761--768},
-	doi          = {10.1109/HPCS48598.2019.9188055}
+
+@inproceedings{kundel_user_2022,
+	title = {User Plane Hardware Acceleration in Access Networks: Experiences in Offloading Network Functions in Real 5G Deployments},
+	url = {http://hdl.handle.net/10125/80236},
+	doi = {10.24251/HICSS.2022.894},
+	shorttitle = {User Plane Hardware Acceleration in Access Networks},
+	abstract = {Fulﬁlling the ambitious Quality of Service demands of today’s wireless networks, especially low latency, high bandwidths and availability, is a big challenge for researchers, network architects, and operators. Each networking component on the data path between the user equipment and the destination data network, e.g., the Internet, must provide the highest performance to meet these requirements. This work demonstrates how different network elements of the user plane, describing the whole path of user trafﬁc, can be sped up with different hardware acceleration technologies. For that, we demonstrate how to build up a 5G standalone campus network for evaluation, working end-to-end with real user equipment and open-source software components. Further, we analyze the user plane network functions of 5G networks from the radio access network to the core. Based on our real 5G setup, the practical evaluation of the analysis results shows up how the 5G user plane hardware can be accelerated best.},
+	eventtitle = {Hawaii International Conference on System Sciences},
+	author = {Kundel, Ralf and Meuser, Tobias and Koppe, Timo and Hark, Rhaban and Steinmetz, Ralf},
+	urldate = {2023-05-10},
+	date = {2022},
+	langid = {english},
+	file = {Kundel et al. - 2022 - User Plane Hardware Acceleration in Access Network.pdf:/home/nzu/Zotero/storage/RDTVSVJK/Kundel et al. - 2022 - User Plane Hardware Acceleration in Access Network.pdf:application/pdf},
 }
-@article{ScientificWorkflows,
-	title        = {Scientific Workflows: Moving Across Paradigms},
-	author       = {Liew, Chee Sun and Atkinson, Malcolm P. and Galea, Michelle and Ang, Tan Fong and Martin, Paul and Hemert, Jano I. Van},
-	year         = 2016,
-	month        = dec,
-	journal      = {ACM Computing Surveys},
-	publisher    = {Association for Computing Machinery},
-	address      = {New York, NY, USA},
-	volume       = 49,
-	number       = 4,
-	doi          = {10.1145/3012429},
-	issn         = {0360-0300},
-	url          = {https://doi.org/10.1145/3012429},
-	issue_date   = {February 2017},
-	abstract     = {Modern scientific collaborations have opened up the opportunity to solve complex problems that require both multidisciplinary expertise and large-scale computational experiments. These experiments typically consist of a sequence of processing steps that need to be executed on selected computing platforms. Execution poses a challenge, however, due to (1) the complexity and diversity of applications, (2) the diversity of analysis goals, (3) the heterogeneity of computing platforms, and (4) the volume and distribution of data.A common strategy to make these in silico experiments more manageable is to model them as workflows and to use a workflow management system to organize their execution. This article looks at the overall challenge posed by a new order of scientific experiments and the systems they need to be run on, and examines how this challenge can be addressed by workflows and workflow management systems. It proposes a taxonomy of workflow management system (WMS) characteristics, including aspects previously overlooked. This frames a review of prevalent WMSs used by the scientific community, elucidates their evolution to handle the challenges arising with the emergence of the “fourth paradigm,” and identifies research needed to maintain progress in this area.},
-	articleno    = 66,
-	numpages     = 39,
-	keywords     = {workflow management systems, workflows, Data-intensive science}
+
+@article{goldenberg_optimizing_nodate,
+	title = {Optimizing cost and performance for multihoming},
+	abstract = {Multihoming is often used by large enterprises and stub {ISPs} to connect to the Internet. In this paper, we design a series of novel smart routing algorithms to optimize cost and performance for multihomed users. We evaluate our algorithms through both analysis and extensive simulations based on realistic charging models, trafﬁc demands, performance data, and network topologies. Our results suggest that these algorithms are very effective in minimizing cost and at the same time improving performance. We further examine the equilibrium performance of smart routing in a global setting and show that a smart routing user can improve its performance without adversely affecting other users.},
+	author = {Goldenberg, David K and Qiu, Lili and Xie, Haiyong and Yang, Yang Richard and Zhang, Yin and Labs, T},
+	langid = {english},
+	file = {Goldenberg et al. - Optimizing cost and performance for multihoming.pdf:/home/nzu/Zotero/storage/JYGB4YVJ/Goldenberg et al. - Optimizing cost and performance for multihoming.pdf:application/pdf},
 }
-@inproceedings{ResourceProvisioning,
-	title        = {Resource Provisioning Options for Large-Scale Scientific Workflows},
-	author       = {Juve, Gideon and Deelman, Ewa},
-	year         = 2008,
-	booktitle    = {2008 IEEE Fourth International Conference on eScience},
-	volume       = {},
-	number       = {},
-	pages        = {608--613},
-	doi          = {10.1109/eScience.2008.160}
+
+@article{tsai,
+	title = {A Review of Multipath Routing Protocols: From Wireless Ad Hoc to Mesh Networks},
+	author = {Tsai, Jack and Moors, Tim},
+	langid = {english},
+	file = {Tsai and Moors - A Review of Multipath Routing Protocols From Wire.pdf:/home/nzu/Zotero/storage/E5ZFSPS8/Tsai and Moors - A Review of Multipath Routing Protocols From Wire.pdf:application/pdf},
 }
-@article{Predictability,
-	title        = {Utilization, predictability, workloads, and user runtime estimates in scheduling the IBM SP2 with backfilling},
-	author       = {Mu'alem, A.W. and Feitelson, D.G.},
-	year         = 2001,
-	journal      = {IEEE Transactions on Parallel and Distributed Systems},
-	volume       = 12,
-	number       = 6,
-	pages        = {529--543},
-	doi          = {10.1109/71.932708}
+
+@inproceedings{lange_performance_2015,
+	location = {Barcelona, Spain},
+	title = {Performance benchmarking of a software-based {LTE} {SGW}},
+	isbn = {978-3-901882-77-7},
+	url = {http://ieeexplore.ieee.org/document/7367386/},
+	doi = {10.1109/CNSM.2015.7367386},
+	abstract = {Network Functions Virtualization ({NFV}) is a concept that aims at providing network operators with beneﬁts in terms of cost, ﬂexibility, and vendor independence by utilizing virtualization techniques to run network functions as software on commercial off-the-shelf ({COTS}) hardware. In contrast, prior solutions rely on specialized hardware for each function. Performance evaluation of such systems usually requires a dedicated testbed for each individual component. Rather than analyzing these proprietary black-box components, Virtualized Network Functions ({VNFs}) are pieces of software that run on {COTS} hardware and whose properties can be investigated in a generic testbed. However, depending on the underlying hardware, operating system, and implementation, {VNFs} might behave differently. Therefore, mechanisms for the performance evaluation of {VNFs} should be similar to benchmarking of software, where different implementations are compared by applying them to predeﬁned test cases and scenarios. This work presents a ﬁrst step towards a benchmarking framework for {VNFs}. Given two different implementations of a {VNF} that acts as {LTE} Serving Gateway ({SGW}), inﬂuence factors and key performance indicators are identiﬁed and a comparison between the two mechanisms is drawn.},
+	eventtitle = {2015 11th International Conference on Network and Service Management ({CNSM})},
+	pages = {378--383},
+	booktitle = {2015 11th International Conference on Network and Service Management ({CNSM})},
+	publisher = {{IEEE}},
+	author = {Lange, Stanislav and Nguyen-Ngoc, Anh and Gebert, Steffen and Zinner, Thomas and Jarschel, Michael and Kopsel, Andreas and Sune, Marc and Raumer, Daniel and Gallenmuller, Sebastian and Carle, Georg and Tran-Gia, Phuoc},
+	urldate = {2023-05-10},
+	date = {2015-11},
+	langid = {english},
+	file = {Lange et al. - 2015 - Performance benchmarking of a software-based LTE S.pdf:/home/nzu/Zotero/storage/4PMTP2EI/Lange et al. - 2015 - Performance benchmarking of a software-based LTE S.pdf:application/pdf},
 }
-@article{Tanenbaum,
-	title        = {Programming languages for distributed computing systems},
-	author       = {Henri E. Bal and Jennifer G. Steiner and Andrew S. Tanenbaum},
-	year         = 1989,
-	journal      = {ACM Computing Surveys},
-	pages        = {32--2}
+
+@article{tarique_survey_2009,
+	title = {Survey of multipath routing protocols for mobile ad hoc networks},
+	volume = {32},
+	issn = {10848045},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S1084804509001027},
+	doi = {10.1016/j.jnca.2009.07.002},
+	abstract = {This survey investigates multipath routing protocols for mobile ad hoc networks ({MANETs}). The main objectives of multipath routing protocols are to provide reliable communication and to ensure load balancing as well as to improve quality of service ({QoS}) of {MANETs}. These multipath protocols are broadly classiﬁed into ﬁve categories based on their major goals. The goals are to improve delay, provide reliability, reduce overhead, maximize network life and support hybrid routing. Multipath routing protocols address issues such as multiple paths discovery and maintaining these paths. Issues, objectives, performances, advantages and disadvantages of these protocols are investigated and summarized. A checklist is provided as a guideline so that a network designer can choose an appropriate multipath routing protocol to meet the network’s application objectives.},
+	pages = {1125--1143},
+	number = {6},
+	journaltitle = {Journal of Network and Computer Applications},
+	shortjournal = {Journal of Network and Computer Applications},
+	author = {Tarique, Mohammed and Tepe, Kemal E. and Adibi, Sasan and Erfani, Shervin},
+	urldate = {2023-05-10},
+	date = {2009-11},
+	langid = {english},
+	file = {Tarique et al. - 2009 - Survey of multipath routing protocols for mobile a.pdf:/home/nzu/Zotero/storage/GVZVMVBA/Tarique et al. - 2009 - Survey of multipath routing protocols for mobile a.pdf:application/pdf},
 }
-@book{Shields,
-	title        = {Control- Versus Data-Driven Workflows},
-	author       = {Shields, Matthew},
-	year         = 2007,
-	booktitle    = {Workflows for e-Science: Scientific Workflows for Grids},
-	publisher    = {Springer London},
-	address      = {London},
-	pages        = {167--173},
-	doi          = {10.1007/978-1-84628-757-2_11},
-	isbn         = {978-1-84628-757-2},
-	url          = {https://doi.org/10.1007/978-1-84628-757-2_11},
-	editor       = {Taylor, Ian J. and Deelman, Ewa and Gannon, Dennis B. and Shields, Matthew},
-	abstract     = {Workflow is typically defined as a sequence of operations or tasks needed to manage a business process or computational activity (Chapter 1). The representation of the sequence of operations or tasks is handled in many different ways by different people and varies from simple scripting languages, through graphs represented in textual or graphical form, to mathematical representations such as Petri Nets (Chapter 13) or $\pi$-calculus (Chapter 15).}
+
+@inproceedings{tschoke_time-sensitive_2021,
+	location = {Valencia, Spain},
+	title = {Time-Sensitive Networking over Metropolitan Area Networks for Remote Industrial Control},
+	isbn = {978-1-66543-326-6},
+	url = {https://ieeexplore.ieee.org/document/9576141/},
+	doi = {10.1109/DS-RT52167.2021.9576141},
+	eventtitle = {2021 {IEEE}/{ACM} 25th International Symposium on Distributed Simulation and Real Time Applications ({DS}-{RT})},
+	pages = {1--4},
+	booktitle = {2021 {IEEE}/{ACM} 25th International Symposium on Distributed Simulation and Real Time Applications ({DS}-{RT})},
+	publisher = {{IEEE}},
+	author = {Tschoke, Simon and Lynker, Frederic and Buhr, Hauke and Schreiner, Florian and Willner, Alexander and Vick, Axel and Chemnitz, Moritz},
+	urldate = {2023-05-10},
+	date = {2021-09-27},
+	langid = {english},
+	file = {Tschoke et al. - 2021 - Time-Sensitive Networking over Metropolitan Area N.pdf:/home/nzu/Zotero/storage/ABWB8YAS/Tschoke et al. - 2021 - Time-Sensitive Networking over Metropolitan Area N.pdf:application/pdf},
 }
-@article{nextflow,
-	title        = {Nextflow enables reproducible computational workflows},
-	author       = {Di Tommaso, Paolo and Chatzou, Maria and Floden, Evan W and Barja, Pablo Prieto and Palumbo, Emilio and Notredame, Cedric},
-	year         = 2017,
-	journal      = {Nature Biotechnology},
-	volume       = 35,
-	number       = 4,
-	pages        = {316–319},
-	doi          = {10.1038/nbt.3820}
+
+@article{ganichev_yamr_2010,
+	title = {{YAMR}: yet another multipath routing protocol},
+	volume = {40},
+	issn = {0146-4833},
+	url = {https://dl.acm.org/doi/10.1145/1880153.1880156},
+	doi = {10.1145/1880153.1880156},
+	shorttitle = {{YAMR}},
+	abstract = {Multipath routing is a promising technique to increase the Internet’s reliability and to give users greater control over the service they receive. However, past proposals choose paths which are not guaranteed to have high diversity. In this paper, we propose yet another multipath routing scheme ({YAMR}) for the interdomain case. {YAMR} provably constructs a set of paths that is resilient to any one inter-domain link failure, thus achieving high reliability in a systematic way. Further, even though {YAMR} maintains more paths than {BGP}, it actually requires signiﬁcantly less control trafﬁc, thus alleviating instead of worsening one of the Internet’s scalability problems. This reduction in churn is achieved by a novel hiding technique that automatically localizes failures leaving the greater part of the Internet completely oblivious.},
+	pages = {13--19},
+	number = {5},
+	journaltitle = {{ACM} {SIGCOMM} Computer Communication Review},
+	shortjournal = {{SIGCOMM} Comput. Commun. Rev.},
+	author = {Ganichev, Igor and Dai, Bin and Godfrey, P. Brighten and Shenker, Scott},
+	urldate = {2023-05-10},
+	date = {2010-10-22},
+	langid = {english},
+	file = {Ganichev et al. - 2010 - YAMR yet another multipath routing protocol.pdf:/home/nzu/Zotero/storage/MA76UM2T/Ganichev et al. - 2010 - YAMR yet another multipath routing protocol.pdf:application/pdf},
 }
-@book{sutton_barto,
-	title        = {Reinforcement learning: An introduction},
-	author       = {Sutton, Richard S. and Bach, Francis and Barto, Andrew G.},
-	year         = 2018,
-	publisher    = {MIT Press Ltd},
-	place        = {Massachusetts}
+
+@article{habib_improving_2007,
+	title = {Improving application {QoS} with residential multihoming},
+	volume = {51},
+	issn = {13891286},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S1389128607000461},
+	doi = {10.1016/j.comnet.2007.01.024},
+	abstract = {An appealing solution for a networked end host to circumvent last mile congestion is to connect to multiple service providers simultaneously, which is known as multihoming. The diﬀerences in peering relationships among diﬀerent service providers make it possible for multihomed hosts to use signiﬁcantly diﬀerent routes to the same destination. Therefore, multihoming can dynamically avoid points of congestion in the network by taking advantage of the choice among diﬀerent routes available at any given time.},
+	pages = {3323--3337},
+	number = {12},
+	journaltitle = {Computer Networks},
+	shortjournal = {Computer Networks},
+	author = {Habib, Ahsan and Chuang, John},
+	urldate = {2023-05-10},
+	date = {2007-08},
+	langid = {english},
+	file = {Habib and Chuang - 2007 - Improving application QoS with residential multiho.pdf:/home/nzu/Zotero/storage/DUAZLFL6/Habib and Chuang - 2007 - Improving application QoS with residential multiho.pdf:application/pdf},
 }
-@article{deelman,
-	title        = {Workflows and e-science: An overview of workflow system features and capabilities},
-	author       = {Deelman, Ewa and Gannon, Dennis and Shields, Matthew and Taylor, Ian},
-	year         = 2009,
-	journal      = {Future Generation Computer Systems},
-	volume       = 25,
-	number       = 5,
-	pages        = {528–540},
-	doi          = {10.1016/j.future.2008.06.012}
+
+@inproceedings{shu_tao_improving_2005,
+	location = {Miami, {FL}, {USA}},
+	title = {Improving {VoIP} quality through path switching},
+	volume = {4},
+	isbn = {978-0-7803-8968-7},
+	url = {http://ieeexplore.ieee.org/document/1498514/},
+	doi = {10.1109/INFCOM.2005.1498514},
+	abstract = {The current hest-effort Internet cannot readily provide the service guarantees that V O W applications often require. Path snitching can potentially address this problem without requiring new network mechanisms, simply hy leveraging the robustness to performance variations available from connectivity options such as multi-homing and overlays. In this paper, we evaluate the effectiveness and benefits of path switching in improving the quality of {VOW} applications, and demonstrate its feasihility through the design and implementation of a prototype gateway. We argue for an application-driven path switching system that accounts for both network path characteristics and application-specific factors (e.g., codec algorithms, playout buffering schemw)+We also develop an application path quality estimator based on the {ITU}-T E-model for voice quality assessment, and an applicationdriven path switching algorithm that dynamically adapts the time scales over which path switching decisions are made to maximize voice quality. Through network emulation and experiments over a wide-area multi-homed testbed, we show that, with sufficient path diversity, path switching can yield meaningful improvemenb in voice quality. Hence by exploiting the inherent path diversity of the Internet, application-driven path switching is a viable option in providing quality-of-service to applications.},
+	eventtitle = {Proceedings {IEEE} 24th Annual Joint Conference of the {IEEE} Computer and Communications Societies.},
+	pages = {2268--2278},
+	booktitle = {Proceedings {IEEE} 24th Annual Joint Conference of the {IEEE} Computer and Communications Societies.},
+	publisher = {{IEEE}},
+	author = {{Shu Tao} and {Kuai Xu} and Estepa, A. and {Teng Fei} and {Lixin Gao} and Guerin, R. and Kurose, J. and Towsley, D. and {Zhi-Li Zhang}},
+	urldate = {2023-05-11},
+	date = {2005},
+	langid = {english},
+	file = {Shu Tao et al. - 2005 - Improving VoIP quality through path switching.pdf:/home/nzu/Zotero/storage/2SQRMHXX/Shu Tao et al. - 2005 - Improving VoIP quality through path switching.pdf:application/pdf},
 }
-@misc{parallelization,
-	title        = {Parallelization in Scientific Workflow Management Systems},
-	author       = {Marc Bux and Ulf Leser},
-	year         = 2013,
-	eprint       = {1303.7195},
-	archiveprefix = {arXiv},
-	primaryclass = {cs.DC}
+
+@inproceedings{fanglu_guo_experiences_2004,
+	location = {Hong Kong, China},
+	title = {Experiences in building a multihoming load balancing system},
+	volume = {2},
+	isbn = {978-0-7803-8355-5},
+	url = {http://ieeexplore.ieee.org/document/1357010/},
+	doi = {10.1109/INFCOM.2004.1357010},
+	abstract = {The growing popularity of consumer hroadhand connection technology. in particular e a h l e n and {ADSL}, has started a quiet revolution that will reshape the Internet connectivity solutions for commercial enterprises. One emerging theme is the replacement of dedicated lines hased on frame relay or {ISDN} technologies with multiple inexpensive {ADSWrdhleTV} links each of which potentially is suhxrihed from a different {ISP}. The key enahling technology for this revolution is multihoming load balancing, which spreads an enterprise's Internet traffic among niultiple access links tn increase the aggregate throughput, and diverts traffic away from non-functional links when they fail. Although there exist several commercial multihoming load halancing products in the marketplace. r e v little is pnhlished ahout the design traded\% and their performance iniplications. In this paper. we descrihe the design space of multihoming load halancing systenis, discuss the tradeoffs involved in load halancing and fail-over implementotion strategies, and present quantitative performance nirasuremeni. collected on a eomniercia1 ninltihoming load halancing system.},
+	eventtitle = {{IEEE} {INFOCOM} 2004},
+	pages = {1241--1251},
+	booktitle = {{IEEE} {INFOCOM} 2004},
+	publisher = {{IEEE}},
+	author = {{Fanglu Guo} and {Jiawu Chen} and {Wei Li} and {Tzi-cker Chiueh}},
+	urldate = {2023-05-13},
+	date = {2004},
+	langid = {english},
+	file = {Fanglu Guo et al. - 2004 - Experiences in building a multihoming load balanci.pdf:/home/nzu/Zotero/storage/UDN6YV2U/Fanglu Guo et al. - 2004 - Experiences in building a multihoming load balanci.pdf:application/pdf},
 }
-@article{examining,
-	title        = {Examining the challenges of scientific workflows},
-	author       = {Gil, Yolanda and Deelman, Ewa and Ellisman, Mark and Fahringer, Thomas and Fox, Geoffrey and Gannon, Dennis and Goble, Carole and Livny, Miron and Moreau, Luc and Myers, Jim and et al.},
-	year         = 2007,
-	journal      = {Computer},
-	volume       = 40,
-	number       = 12,
-	pages        = {24–32},
-	doi          = {10.1109/mc.2007.421}
+
+@article{akella_measurement-based_nodate,
+	title = {A Measurement-Based Analysis of Multihoming},
+	abstract = {Multihoming has traditionally been employed by stub networks to enhance the reliability of their network connectivity. With the advent of commercial “intelligent route control” products, stubs now leverage multihoming to improve performance. Although multihoming is widely used for reliability and, increasingly for performance, not much is known about the tangible beneﬁts that multihoming can offer, or how these beneﬁts can be fully exploited. In this paper, we aim to quantify the extent to which multihomed networks can leverage performance and reliability beneﬁts from connections to multiple providers. We use data collected from servers belonging to the Akamai content distribution network to evaluate performance beneﬁts from two distinct perspectives of multihoming: high-volume content-providers which transmit large volumes of data to many distributed clients, and enterprises which primarily receive data from the network. In both cases, we ﬁnd that multihoming can improve performance signiﬁcantly and that not choosing the right set of providers could result in a performance penalty as high as 40\%. We also ﬁnd evidence of diminishing returns in performance when more than four providers are considered for multihoming. In addition, using a large collection of measurements, we provide an analysis of the reliability beneﬁts of multihoming. Finally, we provide guidelines on how multihomed networks can choose {ISPs}, and discuss practical strategies of using multiple upstream connections to achieve optimal performance beneﬁts.},
+	author = {Akella, Aditya and Maggs, Bruce and Seshan, Srinivasan and Shaikh, Anees and Sitaraman, Ramesh},
+	langid = {english},
+	file = {Akella et al. - A Measurement-Based Analysis of Multihoming.pdf:/home/nzu/Zotero/storage/ULRJUL4B/Akella et al. - A Measurement-Based Analysis of Multihoming.pdf:application/pdf},
 }
-@article{kepler,
-	title        = {S04---introduction to scientific workflow management and the Kepler System},
-	author       = {Altintas, Ilkay and Ludaescher, Bertram and Klasky, Scott and Vouk, Mladen A.},
-	year         = 2006,
-	journal      = {Proceedings of the 2006 ACM/IEEE conference on Supercomputing  - SC '06},
-	doi          = {10.1145/1188455.1188669}
-}
-@article{pegasus,
-	title        = {Pegasus: A framework for mapping complex scientific workflows onto Distributed Systems},
-	author       = {Deelman, Ewa and Singh, Gurmeet and Su, Mei-Hui and Blythe, James and Gil, Yolanda and Kesselman, Carl and Mehta, Gaurang and Vahi, Karan and Berriman, G. Bruce and Good, John and et al.},
-	year         = 2005,
-	journal      = {Scientific Programming},
-	volume       = 13,
-	number       = 3,
-	pages        = {219–237},
-	doi          = {10.1155/2005/128026}
-}
-@article{kubernetes,
-	title        = {Borg, Omega, and kubernetes},
-	author       = {Burns, Brendan and Grant, Brian and Oppenheimer, David and Brewer, Eric and Wilkes, John},
-	year         = 2016,
-	journal      = {Communications of the ACM},
-	volume       = 59,
-	number       = 5,
-	pages        = {50–57},
-	doi          = {10.1145/2890784}
-}
-@article{yarn,
-	title        = {Apache Hadoop Yarn},
-	author       = {Vavilapalli, Vinod Kumar and Murthy, Arun C. and Douglas, Chris and Agarwal, Sharad and Konar, Mahadev and Evans, Robert and Graves, Thomas and Lowe, Jason and Shah, Hitesh and Seth, Siddharth and et al.},
-	year         = 2013,
-	journal      = {Proceedings of the 4th annual Symposium on Cloud Computing},
-	doi          = {10.1145/2523616.2523633}
-}
-@article{watkins_dayan, title={Q-learning}, volume={8}, DOI={10.1007/bf00992698}, number={3-4}, journal={Machine Learning}, author={Watkins, Christopher J. and Dayan, Peter}, year={1992}, pages={279–292}} 
-@inproceedings{ding_efficient,
-  title={An efficient algorithm for generalized linear bandit: Online stochastic gradient descent and thompson sampling},
-  author={Ding, Qin and Hsieh, Cho-Jui and Sharpnack, James},
-  booktitle={International Conference on Artificial Intelligence and Statistics},
-  pages={1585--1593},
-  year={2021},
-  organization={PMLR}
-}
-@article{learningToSchedule,
-  title={Mary, Hugo, and Hugo*: Learning to schedule distributed data-parallel processing jobs on shared clusters},
-  author={Thamsen, Lauritz and Beilharz, Jossekin and Tran, Vinh Thuy and Nedelkoski, Sasho and Kao, Odej},
-  journal={Concurrency and Computation: Practice and Experience},
-  volume={33},
-  number={18},
-  pages={e5823},
-  year={2021},
-  publisher={Wiley Online Library}
-}
-@article{scarl,
-  title={SCARL: attentive reinforcement learning-based scheduling in a multi-resource heterogeneous cluster},
-  author={Cheong, Mukoe and Lee, Hyunsung and Yeom, Ikjun and Woo, Honguk},
-  journal={IEEE Access},
-  volume={7},
-  pages={153432--153444},
-  year={2019},
-  publisher={IEEE}
-}
-@inproceedings{smartYarn,
-  title={Cost-efficient negotiation over multiple resources with reinforcement learning},
-  author={Xu, Yu and Yao, Jianguo and Jacobsen, Hans-Arno and Guan, Haibing},
-  booktitle={2017 IEEE/ACM 25th International Symposium on Quality of Service (IWQoS)},
-  pages={1--6},
-  year={2017},
-  organization={IEEE}
-}
-@inproceedings{vconf,
-  title={Vconf: a reinforcement learning approach to virtual machines auto-configuration},
-  author={Rao, Jia and Bu, Xiangping and Xu, Cheng-Zhong and Wang, Leyi and Yin, George},
-  booktitle={Proceedings of the 6th international conference on Autonomic computing},
-  pages={137--146},
-  year={2009}
-}
-@inproceedings{DeepRM,
-  title={Resource management with deep reinforcement learning},
-  author={Mao, Hongzi and Alizadeh, Mohammad and Menache, Ishai and Kandula, Srikanth},
-  booktitle={Proceedings of the 15th ACM workshop on hot topics in networks},
-  pages={50--56},
-  year={2016}
-}
-@article{tetris,
-  title={Multi-resource packing for cluster schedulers},
-  author={Grandl, Robert and Ananthanarayanan, Ganesh and Kandula, Srikanth and Rao, Sriram and Akella, Aditya},
-  journal={ACM SIGCOMM Computer Communication Review},
-  volume={44},
-  number={4},
-  pages={455--466},
-  year={2014},
-  publisher={ACM New York, NY, USA}
-}
-@article{tarema,
-  title={Tarema: Adaptive Resource Allocation for Scalable Scientific Workflows in Heterogeneous Clusters},
-  author={Bader, Jonathan and Thamsen, Lauritz and Kulagina, Svetlana and Will, Jonathan and Meyerhenke, Henning and Kao, Odej},
-  journal={arXiv preprint arXiv:2111.05167},
-  year={2021}
-}
-@article{tovarjob,
-  title={A job sizing strategy for high-throughput scientific workflows},
-  author={Tovar, Benjamin and da Silva, Rafael Ferreira and Juve, Gideon and Deelman, Ewa and Allcock, William and Thain, Douglas and Livny, Miron},
-  journal={IEEE Transactions on Parallel and Distributed Systems},
-  volume={29},
-  number={2},
-  pages={240--253},
-  year={2017},
-  publisher={IEEE}
-}
-@article{deepQ,
-  title={Human-level control through deep reinforcement learning},
-  author={Mnih, Volodymyr and Kavukcuoglu, Koray and Silver, David and Rusu, Andrei A and Veness, Joel and Bellemare, Marc G and Graves, Alex and Riedmiller, Martin and Fidjeland, Andreas K and Ostrovski, Georg and others},
-  journal={nature},
-  volume={518},
-  number={7540},
-  pages={529--533},
-  year={2015},
-  publisher={Nature Publishing Group}
-}
-@inproceedings{fan2020,
-  title={A theoretical analysis of deep Q-learning},
-  author={Fan, Jianqing and Wang, Zhaoran and Xie, Yuchen and Yang, Zhuoran},
-  booktitle={Learning for Dynamics and Control},
-  pages={486--489},
-  year={2020},
-  organization={PMLR}
-}
-@misc{toussaint,
-  title={Introduction to Artifical Intelligence},
-  author={Marc Toussaint},
-  year={2020},
-  month=feb,
-  organization={Technische Universitaet Berlin}
+
+@online{noauthor_zotero_nodate,
+	title = {Zotero {\textbar} Downloads},
+	url = {https://www.zotero.org/download/},
+	urldate = {2023-05-16},
 }
